// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CouponForm should render a coupon even if no known benefitType is supplied 1`] = `
<form
  className="d-flex align-items-center mb-3"
  onSubmit={[Function]}
>
  <span
    className="text-muted"
  >
    Coupon COUPONCODE applied
  </span>
  <button
    className="display-inline p-0 pl-3 border-0 btn btn-link"
    disabled={false}
    type="submit"
  >
    Remove
  </button>
</form>
`;

exports[`CouponForm should render a form when there is no coupon 1`] = `
<form
  className="summary-row d-flex align-items-end"
  onSubmit={[Function]}
>
  <div
    className="form-group mb-0 mr-2"
  >
    <label
      className="h6 d-block"
      htmlFor="couponField"
    >
      Add coupon code (optional)
    </label>
    <input
      aria-describedby=""
      className="form-control"
      defaultValue=""
      id="couponField"
      name="couponField"
      type="text"
    />
  </div>
  <button
    className="btn btn-outline-primary"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    Apply
  </button>
</form>
`;

exports[`CouponForm should render a percentage value coupon 1`] = `
<form
  className="d-flex align-items-center mb-3"
  onSubmit={[Function]}
>
  <span
    className="text-muted"
  >
    Coupon COUPONCODE applied for 10% off
  </span>
  <button
    className="display-inline p-0 pl-3 border-0 btn btn-link"
    disabled={false}
    type="submit"
  >
    Remove
  </button>
</form>
`;

exports[`CouponForm should render an absolute value coupon 1`] = `
<form
  className="d-flex align-items-center mb-3"
  onSubmit={[Function]}
>
  <span
    className="text-muted"
  >
    Coupon COUPONCODE applied for 
    $10.00
     off
  </span>
  <button
    className="display-inline p-0 pl-3 border-0 btn btn-link"
    disabled={false}
    type="submit"
  >
    Remove
  </button>
</form>
`;
